--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "angular": "~1.3.11",
     "materialize": "~0.95.1",
     "wowjs": "~1.0.3",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "angular-animate": "~1.3.15"
   }
 }
